Closed
Bug 1189709
Opened 10 years ago
Closed 10 years ago
Silverlight fails to run on 20150730030208 Nightly
Categories
(Core :: IPC, defect)
Tracking
()
VERIFIED
FIXED
mozilla43
People
(Reporter: ananuti, Assigned: bugzilla)
References
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
|
3.64 KB,
patch
|
jimm
:
review+
Sylvestre
:
approval-mozilla-aurora+
ritu
:
approval-mozilla-release+
|
Details | Diff | Splinter Review |
Url:
http://www.dcs-digital.com/setweb/ondemandnew.php?onid=3082&&size=b
http://demos.telerik.com/silverlight/
http://bubblemark.com/silverlight2.html
The first bad revision is
changeset: 255050:f290fbb44af6
user: Aaron Klotz <aklotz@mozilla.com>
date: Tue Jul 21 01:21:51 2015 -0600
files: ipc/glue/MessageChannel.cpp ipc/glue/MessageChannel.h ipc/glue/Neutering.h ipc/glue/WindowsMessageLoop.cpp ipc/glue/moz.build
description:
Bug 1185639 - Allow deferred message processing to happen between consecutive IPC message dispatches. r=jimm
| Reporter | ||
Updated•10 years ago
|
Keywords: regression
Comment 1•10 years ago
|
||
confirming, I can reproduce.
Comment 2•10 years ago
|
||
Dupe of https://bugzilla.mozilla.org/show_bug.cgi?id=1187005
Regression introduced by https://bugzilla.mozilla.org/show_bug.cgi?id=1165981
Comment 3•10 years ago
|
||
(In reply to David H. from comment #2)
> Dupe of https://bugzilla.mozilla.org/show_bug.cgi?id=1187005
>
> Regression introduced by https://bugzilla.mozilla.org/show_bug.cgi?id=1165981
That's a bug specific to 64-bit edition.
| Reporter | ||
Comment 4•10 years ago
|
||
(In reply to David H. from comment #2)
> Dupe of https://bugzilla.mozilla.org/show_bug.cgi?id=1187005
>
> Regression introduced by https://bugzilla.mozilla.org/show_bug.cgi?id=1165981
Nothing related. This bug is NOT about "Silverlight is not recognized as installed".
Bug 1165981 landed on m-c on 2015-07-22 (Nightly 20150722030205) which is prior to Bug 1185639. Silverlight works fine on that build.
| Reporter | ||
Updated•10 years ago
|
Hardware: Unspecified → x86
Updated•10 years ago
|
Assignee: nobody → aklotz
| Reporter | ||
Comment 6•10 years ago
|
||
I can't reproduce it in Nightly 8/9/2015 and I found a fix range.
Last bad: mozilla-inbound revision 3d180b8dcf42
http://ftp.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla-inbound-win32/1438932581/
First good: mozilla-inbound revision ce43b991306f
http://ftp.mozilla.org/pub/mozilla.org/firefox/tinderbox-builds/mozilla-inbound-win32/1438933961/
Pushlog: https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=3d180b8dcf42&tochange=ce43b991306f
Fixed by Bob Owen, Bug 1185529.
Assignee: aklotz → nobody
Status: NEW → RESOLVED
Closed: 10 years ago
Flags: needinfo?(aklotz)
Resolution: --- → FIXED
Whiteboard: [fixed by 1185529]
Target Milestone: --- → mozilla42
| Reporter | ||
Comment 7•10 years ago
|
||
(In reply to Ekanan Ketunuti from comment #6)
> I can't reproduce it in Nightly 8/9/2015 and I found a fix range.
Sorry, I meant Nightly 8/8/2015 (20150808030207) :(
Whiteboard: [fixed by 1185529] → [fixed by bug 1185529]
Comment 8•10 years ago
|
||
I'm still getting frequent problems with SilverLight in Nightly on Amazon where I get a white tab, sometimes with sound in the background.
I don't get the issue on any other sites using SilverLight that I've tried.
I can't reproduce this if I back out the changeset for bug 1185639.
Status: RESOLVED → REOPENED
Flags: needinfo?(aklotz)
Resolution: FIXED → ---
| Assignee | ||
Comment 9•10 years ago
|
||
Looks like Silverlight is doing some fun stuff with window subclassing and the like during initialization. This is not currently compatible with window neutering which now happens sooner in IPC calls.
Flags: needinfo?(aklotz)
| Reporter | ||
Comment 10•10 years ago
|
||
[Tracking Requested - why for this release]: regression
(In reply to Bob Owen (:bobowen) from comment #8)
> I'm still getting frequent problems with SilverLight in Nightly on Amazon
> where I get a white tab, sometimes with sound in the background.
> I don't get the issue on any other sites using SilverLight that I've tried.
>
I've been playing around with this for a while and seeing this too.
STR:
1. Open any link in comment 0 and activate Silverlight.
2. Switch to the other tab.
3. Wait for a while (5 or 10 seconds maybe, I can't really tell.)
4. Switch back to tab opened in step 1.
AR:
Silverlight became white.
Assignee: nobody → aklotz
Status: REOPENED → NEW
status-firefox43:
--- → affected
tracking-firefox42:
--- → ?
tracking-firefox43:
--- → ?
Whiteboard: [fixed by bug 1185529]
Target Milestone: mozilla42 → ---
Updated•10 years ago
|
| Assignee | ||
Comment 11•10 years ago
|
||
The problem here was that we were neutering too aggressively in IPC Call()s. When the plugin tried to subclass the plugin window, it was inadvertently subclassing the NeuteredWindowProc instead.
Intercepting SetWindowLong* and playing around with that was too fragile, so I opted to reduce the scope of the NeuteredWindowRegion and add DeferredMessagePlaybackSuppressor to hold back deferred message playback until the end the call.
This fixes the problem with all three URLs described in the but report.
Attachment #8653192 -
Flags: review?(jmathies)
| Assignee | ||
Comment 12•10 years ago
|
||
Comment on attachment 8653192 [details] [diff] [review]
Patch
I'm going to update this patch, so cancelling the review request for now.
Attachment #8653192 -
Flags: review?(jmathies)
| Assignee | ||
Comment 13•10 years ago
|
||
Attachment #8653192 -
Attachment is obsolete: true
Attachment #8653593 -
Flags: review?(jmathies)
Updated•10 years ago
|
Attachment #8653593 -
Flags: review?(jmathies) → review+
| Assignee | ||
Updated•10 years ago
|
Keywords: checkin-needed
Comment 14•10 years ago
|
||
Keywords: checkin-needed
| Assignee | ||
Comment 15•10 years ago
|
||
Comment on attachment 8653593 [details] [diff] [review]
Patch (r2)
Approval Request Comment
[Feature/regressing bug #]: bug 1185639
[User impact if declined]: Silverlight won't start
[Describe test coverage new/current, TreeHerder]: Plugin test suite, manually tested with silverlight.
[Risks and why]: Low, this patch reduces the scope of the changes in the regressing bug.
[String/UUID change made/needed]: None
Attachment #8653593 -
Flags: approval-mozilla-aurora?
Comment 16•10 years ago
|
||
Status: NEW → RESOLVED
Closed: 10 years ago → 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
Comment 17•10 years ago
|
||
Comment on attachment 8653593 [details] [diff] [review]
Patch (r2)
Sure, taking it for 42.
Attachment #8653593 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 18•10 years ago
|
||
| Reporter | ||
Comment 20•10 years ago
|
||
verified fixed in aurora 9/01.
| Assignee | ||
Comment 21•10 years ago
|
||
Comment on attachment 8653593 [details] [diff] [review]
Patch (r2)
Approval Request Comment
[Feature/regressing bug #]: bug 1185639
[User impact if declined]: Silverlight busted. Must be landed as a follow-up to bug 1185639.
[Describe test coverage new/current, TreeHerder]: Plugin test suite
[Risks and why]: Low, has been working well on aurora and beta
[String/UUID change made/needed]: None
Attachment #8653593 -
Flags: approval-mozilla-release?
status-firefox41:
--- → affected
tracking-firefox41:
--- → +
Comment 22•10 years ago
|
||
Comment on attachment 8653593 [details] [diff] [review]
Patch (r2)
Approving for uplift to moz-release to be included in 41.0.1 build2. This patch is needed to fix the recent flash hangs (bug 1207766).
Attachment #8653593 -
Flags: approval-mozilla-release? → approval-mozilla-release+
Comment 24•10 years ago
|
||
During our Firefox 41.0.1 build 2 smoke testing we ran a number of plugin tests that included Silverlight across platforms (Windows 10 32bit, Windows 7 64bit, Mac OS X 10.10.5) and we can say that this issue is verified fixed.
You need to log in
before you can comment on or make changes to this bug.
Description
•