Bug 1189709 - Reduce scope of MessageChannel window neutering. r=jimm CLOSED TREE